# LEPAM

./: .gitignore  CMakeLists.txt  DrawGeo.cc  GetTracks.cc  Mainfile.cc  Makefile  README.md  Track_gif.nb  run.param
data/Al0.05Ga0.95N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.05Ga0.95N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/Al0.1Ga0.9N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.1Ga0.9N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/Al0.2Ga0.8N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.2Ga0.8N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/Al0.3Ga0.7N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.3Ga0.7N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/Al0.4Ga0.6N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.4Ga0.6N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/Al0.5Ga0.5N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.5Ga0.5N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/Al0.6Ga0.4N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.6Ga0.4N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/Al0.7Ga0.3N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.7Ga0.3N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/Al0.8Ga0.2N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.8Ga0.2N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/Al0.9Ga0.1N/: DISORDER_AIT_h.txt  DOS.txt  EffMass_e.txt  EffMass_h.txt
data/Al0.9Ga0.1N/phait/: MLS_DLA_abs_h.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_h.txt
data/AlN/: DOS.txt  EffMass_e.txt  EffMass_h.txt
data/AlN/phait/: MLS_DLA_abs_e.txt  MLS_DLA_abs_h.txt  MLS_DLA_em_e.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_e.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_e.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_e.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_e.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_e.txt  PhAIT_PLO_abs_h.txt  PhAIT_PLO_em_e.txt  PhAIT_PLO_em_h.txt
data/GaN/: DOS.txt  EHRadTime.txt  EffMass_e.txt  EffMass_h.txt  ExDecayTime.txt
data/GaN/exadt/: ExADT.txt
data/GaN/phait/: MLS_DLA_abs_e.txt  MLS_DLA_abs_h.txt  MLS_DLA_em_e.txt  MLS_DLA_em_h.txt  MLS_PLO_abs_e.txt  MLS_PLO_abs_h.txt  MLS_PLO_em_e.txt  MLS_PLO_em_h.txt  PhAIT_DLA_abs_e.txt  PhAIT_DLA_abs_h.txt  PhAIT_DLA_em_e.txt  PhAIT_DLA_em_h.txt  PhAIT_PLO_abs_e.txt  (+3 more)
data/Lu1.6Y0.4SiO5/: DOS.txt  EffMass_e.txt  EffMass_h.txt
include/: CenterProperties.hh  DetectorConstruction.hh  LinearInterpolation.hh  LinearInterpolation2D.hh  LinearInterpolation3D.hh  MaterialProperties.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunManager.hh  Track.hh  TrackPropagation.hh
src/: CenterProperties.cc  DetectorConstruction.cc  LinearInterpolation.cc  LinearInterpolation2D.cc  LinearInterpolation3D.cc  MaterialProperties.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunManager.cc  Track.cc  TrackPropagation.cc
(+18 files in other folders)
